6728842: File.setReadOnly does not make a directory read-only (win) 6464744: java/io/File/SetAccess.java ignores sticky bit

Reviewed-by: forax